More cors changes